@@ -215,7 +215,7 @@
               // Update Task
               // Create Child Task
               // Create Dependent Task
-              // Create Booking
+              // Create TimeLog
               // ============
               // Delete
               // 
@@ -344,9 +344,9 @@
               
               {% endif %}
               
-              var create_booking_menuItem_creator = function(){
+              var create_time_log_menuItem_creator = function(){
                 return new MenuItem({
-                  label: 'Create Booking',
+                  label: 'Create TimeLog',
                   onClick: function(){
                     var node = this.getParent().currentTarget;
                     var taskId = node.getAttribute('taskId');
@@ -358,16 +358,16 @@
                     if(task.isParent()){
                       // warn the user and return
                       alert('This is a container Task,\n' +
-                            'You can not enter any bookings for\n' +
+                            'You can not enter any time_logs for\n' +
                             'container Tasks!');
                       return;
                     }
                     
                     saveGanttOnServer().then(function(){
                       var dialog = dialogCreator({
-                        dialog_id: 'create_booking_dialog',
+                        dialog_id: 'create_time_log_dialog',
                         data_id: taskId,
-                        content_creator: create_booking_dialog_creator,
+                        content_creator: create_time_log_dialog_creator,
                         related_field_updater: loadGanttFromServer
                       });
                       dialog.show();
@@ -376,7 +376,7 @@
                 })
               };
               
-              leaf_task_menu.addChild(create_booking_menuItem_creator());
+              leaf_task_menu.addChild(create_time_log_menuItem_creator());
               
               {% if entity.entity_type != 'User' %}
               
